--- a/Table.html
+++ b/Table.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Encryption and Decryption with JavaScript</title>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<script>
 		function encrypt() {
 			var plaintext = document.getElementById("plaintext").value;
