--- a/Table.html
+++ b/Table.html
@@ -98,6 +98,76 @@
         <td>N/A</td>
         <td>U2FsdGVkX1/chfKPl13qoIxqivTAYkV8Xjz1kp8+kBZciiH0DFMY+Sj5WHVdpgV1</td>
     </tr>
+<tr>
+	<td>Line</td>
+	<td>Old</td>
+	<td>U2FsdGVkX1/Xk0IDIdZM+Gw3Reyz5up3mzLNYiAYXII=</td>
+	</tr>
+	<tr>
+		<td>LingoBus</td>
+		<td>No</td>
+		<td>U2FsdGVkX19TNbG/WRwtpdZIDktK9b4hUBKwlfal0BY=</td>
+	</tr>
+	<tr>
+		<td>LitCharts</td>
+		<td>GL</td>
+		<td>U2FsdGVkX19AgHWvOp3tnYdeCqLRMHJQTdrN9/ISfrI=</td>
+	</tr>
+	<tr>
+		<td>MathSpace</td>
+		<td>Corp.</td>
+		<td>U2FsdGVkX1/wqzW22k6Q6a5IyIwc3Nf1ZgIqAJ+qp2c=</td>
+	</tr>
+	<tr>
+		<td>Netflix</td>
+		<td>Building</td>
+		<td>U2FsdGVkX19rnApcLQLKaVoK/8T5gVZks77gAAInf/g=</td>
+	</tr>
+	<tr>
+		<td>NTLite</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX1/AOiudjqK+c8N/bgDwrvgwvjIX3O+KiZ8=</td>
+	</tr>
+	<tr>
+		<td>OnlyOffice</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX18pK1z6iVKH7qTmY6+vnSyWXfpJa2ZP5pg=</td>
+	</tr>
+	<tr>
+		<td>OSX</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX1/IDyKu2YGc+1uUiuKEn3ppuKDMVMcHCmc=</td>
+	</tr>
+	<tr>
+		<td>Parsec</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX1/8BMrbn+x+JhrryyWk5mcj3iGMuQ0Ffcc=</td>
+	</tr>
+	<tr>
+		<td>Prezi</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX19JpdeI5DelHkjhQQszihvi+Psr0jNHHVI=</td>
+	</tr>
+	<tr>
+		<td>VPN</td>
+		<td>No</td>
+		<td>U2FsdGVkX18UnnQto7kfD/HCmRrYl/MLwJJsflykyhg=</td>
+	</tr>
+	<tr>
+		<td>VPN2</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX18/pIl9ES/LWmLxjpfezblHDM+U0tOsi+k=</td>
+	</tr>
+	<tr>
+		<td>Unity</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX183Q3jERUwf2ygMO+rx/kDX7oOE+seis34=</td>
+	</tr>
+	<tr>
+		<td>Wikipedia</td>
+		<td>Basic</td>
+		<td>U2FsdGVkX1/9LIXt77nbl2p2SXRNq5dt+BrnAZcWcx0=</td>
+	</tr>	 
 </table>
 	<h1>Encryption and Decryption with JavaScript</h1>
 	<label for="plaintext">Plaintext:</label>
